# CIDM6325_Final_Project

./: .env.example  .env.production  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CHECKLIST_COMPLETION.md  FinalProjectRubric.MD  LAYMAN_CHECKLIST_01.md  Makefile  PRD.md  PRD_ExpenseTrackLite.markdown  Procfile  ProjectPitch - Defoor.docx  README.MD  TEMP  manage.py  pyproject.toml  pyrightconfig.json  railway.toml  requirements-root.txt  requirements.txt  test_admin_interface.py
My Project/: RAILWAY_DEPLOYMENT_GUIDE.md  RUBRIC_IMPLEMENTATION_ANALYSIS.md  deploy.sh  pyproject.toml  railway.toml  requirements.txt
My Project/.github/workflows/: deploy.yml
My Project/authentication/: admin.py  views.py
My Project/cfmp/management/commands/: setup_project.py
My Project/cfmp/settings/: production.py  staging.py  test.py
My Project/docs/adr/: ADR-001-data-model-design.md  ADR-002-django-views-architecture.md  ADR-004-admin-interface.md  ADR-005-observability-monitoring.md  ADR-006-deployment-environment.md  ADR-008-uv-package-management.md
My Project/docs/briefs/: BRIEF-003-authentication-authorization.md  BRIEF-004-django-admin-interface.md  BRIEF-005-observability-monitoring.md  BRIEF-006-deployment-environment.md  BRIEF-007-railway-deployment-hosting.md  BRIEF-008-uv-package-management-implementation.md
My Project/donations/: analytics.py  forms.py  managers.py  signals.py  urls.py  validators.py
My Project/donations/management/commands/: process_expired_donations.py
My Project/donations/migrations/: 0001_initial.py
My Project/donations/tests/: test_managers.py  test_views.py
My Project/monitoring/: urls.py  views.py
My Project/pantries/: apps.py  forms.py
My Project/pantries/tests/: __init__.py
My Project/static/css/: cfmp.css
My Project/static/js/components/: donation-search.js
My Project/staticfiles/css/components/: cards.css  navbar.css
My Project/templates/: base.html  home.html
My Project/templates/authentication/: donor_register.html  login.html  password_reset_form.html
My Project/templates/components/: _alerts.html  _sidebar.html
My Project/templates/donations/: donation_detail.html  donation_list.html
travelmathlite/: .env.example  README.md  main.py  manage.py  pyproject.toml  pyrightconfig.json
travelmathlite/apps/: __init__.py
travelmathlite/apps/accounts/: __init__.py  apps.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
travelmathlite/apps/accounts/migrations/: 0001_initial.py
travelmathlite/apps/accounts/tests/: test_profile.py  test_rate_limit.py  test_session_migration.py  test_urls_templates.py
travelmathlite/apps/airports/: __init__.py  admin.py  apps.py  forms.py  models.py  schema_mapping.py  tests_distance_units.py  tests_import.py  tests_nearest_core.py  tests_schema_mapping.py  tests_update_command.py  tests_validate_command.py  tests_validation.py  urls.py  utils.py  views.py
travelmathlite/apps/airports/fixtures/: README.md  airports.json
travelmathlite/apps/airports/migrations/: 0001_initial.py  0002_airport_core_integrations.py  0003_rename_airports_c_country_91032d_idx_airports_country_5e4228_idx_and_more.py
travelmathlite/apps/airports/services/: __init__.py  integration.py
travelmathlite/apps/airports/tests/: test_admin.py  test_cache_utils.py  test_querysets.py  tests.py  tests_city_country_integration.py  tests_distance_units.py  tests_forms.py  tests_import.py  tests_nearest.py  tests_nearest_core.py  tests_templates.py  tests_update_command.py  tests_views.py
travelmathlite/apps/base/: __init__.py  admin.py  apps.py  models.py  views.py
travelmathlite/apps/base/management/: __init__.py
travelmathlite/apps/base/migrations/: 0001_initial.py  0002_rename_city_country_search_idx_base_city_country_d2c156_idx_and_more.py
travelmathlite/apps/base/templates/base/: index.html
travelmathlite/apps/base/templatetags/: sanitize.py
travelmathlite/apps/base/tests/: __init__.py  base.py  test_admin.py  test_base.py  test_infrastructure.py  test_mocking_examples.py  test_models.py  test_namespaces.py  test_querysets.py
travelmathlite/apps/base/utils/: sanitize.py  units.py
travelmathlite/apps/calculators/: __init__.py  apps.py  costs.py  forms.py  geo.py  test_caching.py  tests.py  urls.py  utils.py  views.py
travelmathlite/apps/calculators/tests/: test_cache_utils.py  test_costs.py  test_fly_or_drive.py  test_geo.py  test_views.py
travelmathlite/apps/core/: __init__.py  apps.py  urls.py  views.py
travelmathlite/apps/search/: __init__.py  apps.py  test_caching.py  tests.py  urls.py  views.py
travelmathlite/apps/search/templatetags/: __init__.py  highlight.py  search_extras.py
travelmathlite/apps/search/tests/: __init__.py  test_caching.py  test_root.py  test_views.py
travelmathlite/apps/trips/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
travelmathlite/apps/trips/migrations/: 0001_initial.py
travelmathlite/apps/trips/tests/: __init__.py  test_sanitization.py  test_saved_calculation.py  test_views_saved.py
travelmathlite/core/: logging.py  middleware.py  sentry.py  session.py  settings.py  sitemaps.py  urls.py  views.py  wsgi.py
travelmathlite/core/management/commands/: check_settings.py
travelmathlite/core/settings/: __init__.py  base.py  local.py  prod.py
travelmathlite/core/tests/: test_auth.py  test_cache_config.py  test_cache_headers.py  test_caching_integration.py  test_health.py  test_logging.py  test_middleware.py  test_observability.py  test_sanitization.py  test_security.py  test_settings_local.py  test_settings_prod.py
travelmathlite/downloads/: .gitignore
travelmathlite/scripts/: README.md  run_collectstatic.py  visual_check_htmx_calculators.py  visual_check_search.py
travelmathlite/scripts/visual_checks/: static_pipeline_check.py
travelmathlite/static/css/: accessibility.css  overrides.css
travelmathlite/templates/: 404.html  500.html  README.md  base.html  robots.txt
travelmathlite/templates/includes/: alerts.html  footer.html  head.html  navbar.html  pagination.html
travelmathlite/tmlite/: apps.py
(+455 files in other folders)
