[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cidm6325"
version = "0.1.0"
description = "Minimal project declaring Django 5.2.6 as the sole dependency"
readme = "README.MD"
requires-python = ">=3.12"
authors = [{ name = "ahuimanu" }]
license = "MIT"
keywords = ["django"]
dependencies = ["Django==5.2.6"]

[project.urls]
Homepage = "https://example.com/"

[tool.setuptools.packages.find]
where = ["."]
include = ["api_examples*"]
