[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfmp"
version = "0.1.0"
description = "Community Food Management Platform - Django web application for connecting food donors with pantries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Steven Puente", email = "sapuente1@buffs.wtamu.edu"},
]
keywords = ["django", "food-management", "community", "donations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

# Core runtime dependencies
dependencies = [
    "Django>=5.2.6,<5.3",
    "psycopg[binary]>=3.1.13",
    "django-environ>=0.11.2",
    "Pillow>=10.1.0",
    "whitenoise>=6.6.0",
    "gunicorn>=21.2.0",
    "redis>=4.6.0",
    "dj-database-url>=2.1.0",
    "python-json-logger>=2.0.7",
]

[dependency-groups]
# Development dependencies
dev = [
    "ruff>=0.6.9",
    "pre-commit>=3.6.0",
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.3",
    "ipython>=8.18.0",
    "model-bakery>=1.17.0",
    "coverage>=7.3.0",
]

# Testing dependencies
test = [
    "pytest-django>=4.7.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.2.2",
]

# Production monitoring and security
prod = [
    "sentry-sdk[django]>=1.38.0",
    "django-csp>=3.7",
    "django-ratelimit>=4.1.0",
    "celery[redis]>=5.3.4",
]

# Documentation
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "django-extensions>=3.2.3",
]

[project.urls]
Homepage = "https://github.com/sapuente1/cfmp"
Repository = "https://github.com/sapuente1/cfmp"
Documentation = "https://cfmp.readthedocs.io"
"Bug Tracker" = "https://github.com/sapuente1/cfmp/issues"

[project.scripts]
cfmp = "cfmp.cli:main"

# Hatchling configuration
[tool.hatch.build.targets.wheel]
packages = ["cfmp"]

[tool.hatch.metadata]
allow-direct-references = true

# Ruff configuration for linting and formatting
[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "DJ",   # flake8-django
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert (OK in tests)
    "DJ01",  # nullable CharField (sometimes OK)
]

[tool.ruff.per-file-ignores]
"*/tests/*" = ["S101", "S105", "S106"]  # Allow assert and hardcoded passwords in tests
"*/migrations/*" = ["E501", "DJ01"]     # Ignore line length and nullable in migrations
"manage.py" = ["S101"]                  # Allow assert in manage.py
"*/settings/*" = ["S105"]               # Allow hardcoded passwords in settings

[tool.ruff.isort]
known-first-party = ["cfmp"]
known-django = ["django"]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

# Coverage configuration
[tool.coverage.run]
source = ["cfmp"]
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "manage.py",
    "*/settings/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Django configuration
[tool.django-stubs]
django_settings_module = "cfmp.settings.development"

# Pytest configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cfmp.settings.test"
addopts = "--reuse-db --nomigrations"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["tests"]